增加問題解決與心得

--- a/content/問題解決與心得.html
+++ b/content/問題解決與心得.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='W14.html'>W14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></ul><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='考試成績.html'>考試成績</a><ul class='dropdown'><li class='has-children'><a href='1a.html'>1a</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li class='has-children'><a href='1b.html'>1b</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w14.html'>w14</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='老師的繪畫方格.html'>老師的繪畫方格</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></ul><li class='has-children'><a href='W14.html'>W14</a><ul class='dropdown'><li><a href='1a w14抽考成績與缺考人員名單.html'>1a w14抽考成績與缺考人員名單</a></li></ul><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='考試成績.html'>考試成績</a><ul class='dropdown'><li class='has-children'><a href='1a.html'>1a</a><ul class='dropdown'><li><a href='第4週.html'>第4週</a><li><a href='第8週.html'>第8週</a><li><a href='第9週.html'>第9週</a><li><a href='第10週.html'>第10週</a><li><a href='第14週.html'>第14週</a></li></ul><li class='has-children'><a href='1b.html'>1b</a><ul class='dropdown'><li><a href='w4.html'>w4</a><li><a href='w8.html'>w8</a><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w14.html'>w14</a></li></li></ul></ul><li><a href='問題解決與心得.html'>問題解決與心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>心得</h1>
-<p>在課程一開始始的時候,大家都當這堂課混混就好,直到w5的時候我才意識到要開始做不做不行了,所以我在w5的時候用replit創建了一個動態網站然後開始預習課堂上的作業:抽點程式,擷取個人靜態網站.</p>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>問題解決與心得</h1>
+<p>在課程一開始始的時候,老師要求我們在Replit上連接github創建動態網站,</p>
+<p><img alt="" height="240" src="./../images/螢幕擷取畫面 2022-12-21 002220.png" width="480"/></p>
+<p>所以我在w5的時候用Replit創建了第一個動態網站,開始預習課堂上的作業:抽點程式,擷取個人靜態網站.但是到第7週時老師通知我們Replit將要停止服務</p>
+<p><img alt="" height="238" src="./../images/螢幕擷取畫面 2022-12-21 002236.png" width="476"/></p>
+<p>所以要我們搬家到stud.cycu.org伺服器,然後在我成功git clone到stud.cycu.org創建了第二動態網站的時候卻不知道如何讓網頁中的python3 server.py一直開啟</p>
+<p>   <img alt="" height="295" src="./../images/螢幕擷取畫面 2022-12-21 002934.png" width="247"/></p>
+<p>    <img alt="" height="187" src="./../images/MicrosoftTeams-image (1).png" width="468"/></p>
+<p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
+<p> <img alt="" height="146" src="./../images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
+<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
+<p><img alt="" height="143" src="./../images/螢幕擷取畫面 2022-12-21 001817.png" width="529"/></p>
+<p></p>
+<p></p>
+<p></p><br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
       <div class="container">
