--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,4 @@
-<h1>About              </h1>
+<h1>About</h1>
 <p>41123147蔡承翰</p>
 <p><span>此網站使用</span><span> stud.cycu.org編寫</span></p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
@@ -244,9 +244,21 @@ doc["power"].bind("click", launchAnimation)
 <p>因此還無法列出缺考名單</p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6464b77824f57aac51d16dfe31b9a8f1/raw/eb9389f5b07968bccff28b52e0516ecfa527a6f3/gistfile1.txt">點這裡列出w14考試成績</a></p>
 <div></div>
-<h1>心得</h1>
-<p>在課程一開始始的時候,大家都當這堂課混混就好,直到w5的時候我才意識到要開始做不做不行了,所以我在w5的時候用replit創建了一個動態網站然後開始預習課堂上的作業:抽點程式,擷取個人靜態網站.</p>
-<h1>cp2022H1</h1>
+<h1>問題解決與心得</h1>
+<p>在課程一開始始的時候,老師要求我們在Replit上連接github創建動態網站,</p>
+<p><img alt="" height="240" src="/images/螢幕擷取畫面 2022-12-21 002220.png" width="480"/></p>
+<p>所以我在w5的時候用Replit創建了第一個動態網站,開始預習課堂上的作業:抽點程式,擷取個人靜態網站.但是到第7週時老師通知我們Replit將要停止服務</p>
+<p><img alt="" height="238" src="/images/螢幕擷取畫面 2022-12-21 002236.png" width="476"/></p>
+<p>所以要我們搬家到stud.cycu.org伺服器,然後在我成功git clone到stud.cycu.org創建了第二動態網站的時候卻不知道如何讓網頁中的python3 server.py一直開啟</p>
+<p>   <img alt="" height="295" src="/images/螢幕擷取畫面 2022-12-21 002934.png" width="247"/></p>
+<p>    <img alt="" height="187" src="/images/MicrosoftTeams-image (1).png" width="468"/></p>
+<p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
+<p> <img alt="" height="146" src="/images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
+<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
+<p><img alt="" height="143" src="/images/螢幕擷取畫面 2022-12-21 001817.png" width="529"/></p>
+<p></p>
+<p></p>
+<p></p><h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
 <p>亦即將所有對應的 html 也使用 Brython 產生, 然後寫為 <a href="https://docs.python.org/3/tutorial/classes.html">class</a> 後, 在範例導入時透過 <a href="https://docs.python.org/3/tutorial/classes.html#instance-objects">instance</a> 引用.</p>
