問題解決添加

--- a/content/問題解決與心得.html
+++ b/content/問題解決與心得.html
@@ -151,10 +151,16 @@ img.add_border {
 <p>    <img alt="" height="187" src="./../images/MicrosoftTeams-image (1).png" width="468"/></p>
 <p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
 <p> <img alt="" height="146" src="./../images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
-<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
-<p><img alt="" height="143" src="./../images/螢幕擷取畫面 2022-12-21 001817.png" width="529"/></p>
-<p></p>
-<p></p>
+<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定gitconfig[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
+<p><img alt="" height="141" src="./../images/螢幕擷取畫面 2022-12-21 001817.png" width="522"/></p>
+<p>再重設gitconfig之後再使用git pull拉下版本合併</p>
+<p><img alt="" height="163" src="./../images/MicrosoftTeams-image (2).png" width="509"/></p>
+<p>終於成功推送改版至github,但是之前在Replit做的時候創建了一個branch</p>
+<p><img alt="" height="184" src="./../images/螢幕擷取畫面 2022-12-21 134132.png" width="273"/></p>
+<p>導致之後的git pull 與commit出現錯誤</p>
+<p><img alt="" height="81" src="./../images/螢幕擷取畫面 2022-12-21 004054.png" width="507"/></p>
+<p><img alt="" height="204" src="./../images/螢幕擷取畫面 2022-12-21 004349.png" width="510"/></p>
+<p>然後再詢問老師如何處理之後</p>
 <p></p><br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
