--- a/config/content.htm
+++ b/config/content.htm
@@ -254,10 +254,16 @@ doc["power"].bind("click", launchAnimation)
 <p>    <img alt="" height="187" src="/images/MicrosoftTeams-image (1).png" width="468"/></p>
 <p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
 <p> <img alt="" height="146" src="/images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
-<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
-<p><img alt="" height="143" src="/images/螢幕擷取畫面 2022-12-21 001817.png" width="529"/></p>
-<p></p>
-<p></p>
+<p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定gitconfig[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
+<p><img alt="" height="141" src="/images/螢幕擷取畫面 2022-12-21 001817.png" width="522"/></p>
+<p>再重設gitconfig之後再使用git pull拉下版本合併</p>
+<p><img alt="" height="163" src="/images/MicrosoftTeams-image (2).png" width="509"/></p>
+<p>終於成功推送改版至github,但是之前在Replit做的時候創建了一個branch</p>
+<p><img alt="" height="184" src="/images/螢幕擷取畫面 2022-12-21 134132.png" width="273"/></p>
+<p>導致之後的git pull 與commit出現錯誤</p>
+<p><img alt="" height="81" src="/images/螢幕擷取畫面 2022-12-21 004054.png" width="507"/></p>
+<p><img alt="" height="204" src="/images/螢幕擷取畫面 2022-12-21 004349.png" width="510"/></p>
+<p>然後再詢問老師如何處理之後</p>
 <p></p><h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
 <p><a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件應該可以在啟動 Brython 時, 設定將 .py 檔案放入 downloads/py 目錄中引用.</p>
