--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -252,7 +252,7 @@ doc["power"].bind("click", launchAnimation)
 <p>所以要我們搬家到stud.cycu.org伺服器,然後在我成功git clone到stud.cycu.org創建了第二動態網站的時候卻不知道如何讓網頁中的python3 server.py一直開啟</p>
 <p>   <img alt="" height="295" src="/images/螢幕擷取畫面 2022-12-21 002934.png" width="247"/></p>
 <p>    <img alt="" height="187" src="/images/MicrosoftTeams-image (1).png" width="468"/></p>
-<p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前作業</p>
+<p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
 <p> <img alt="" height="146" src="/images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
 <p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
 <p><img alt="" height="143" src="/images/螢幕擷取畫面 2022-12-21 001817.png" width="529"/></p>
