--- a/config/content.htm
+++ b/config/content.htm
@@ -36,11 +36,13 @@
 <div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
 <h2>w15</h2>
 <p>1,為何學習計算機程式需要建立個人倉儲?</p>
-<p>讓每個改版步驟都可以通過調閱來檢視</p>
+<p><span>A.能分散式的開發,免費,<span>一切公開,</span>每次push都能產生一個對應的版次，因此當出現大量麻煩的錯誤時或上級要求回歸前個設計時就能很方便的切換版</span></p>
 <p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
 <p>與時俱進</p>
 <p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
-<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p><span>A.1.Replit: 能夠提供使用者雲端開發環境</span></p>
+<p><span>  2.stud.cycu.org: 學校</span>Ubuntu司服器能直接acp推送改版</p>
+<p><span>  3.localhost:主機近端以執行動態網站使用acp推送改版</span></p>
 <p>4,https, ssh 到底提供使用者那些功能或優點?</p>
 <p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
 <p>5,Brython 與 Python 有甚麼差別?</p>
@@ -195,8 +197,7 @@ grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
 
 doc["power"].bind("click", launchAnimation)
 </script>
-<p></p>
-<h1>考試成績</h1>
+<p></p><h1>考試成績</h1>
 <h2>1a</h2>
 <h3>第4週</h3>
 <p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
@@ -252,7 +253,7 @@ doc["power"].bind("click", launchAnimation)
 <p>所以要我們搬家到stud.cycu.org伺服器,然後在我成功git clone到stud.cycu.org創建了第二動態網站的時候卻不知道如何讓網頁中的python3 server.py一直開啟</p>
 <p>   <img alt="" height="295" src="/images/螢幕擷取畫面 2022-12-21 002934.png" width="247"/></p>
 <p>    <img alt="" height="187" src="/images/MicrosoftTeams-image (1).png" width="468"/></p>
-<p>然後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
+<p>隨後在跟老師討論之下發現要在python3 server.py &amp; 下完之後 exit才可以不停止先前動作</p>
 <p> <img alt="" height="146" src="/images/螢幕擷取畫面 2022-12-21 001454.png" width="488"/></p>
 <p>緊接著我又發現我無法提交改版至倉儲,在與老師的再次討論下發現在設定gitconfig[http][user]的時候不可以用windows文件打開設定一定要用內不只另設定不然無法推送改至github</p>
 <p><img alt="" height="141" src="/images/螢幕擷取畫面 2022-12-21 001817.png" width="522"/></p>
