--- a/content/w15.html
+++ b/content/w15.html
@@ -143,11 +143,13 @@ img.add_border {
         </header>
     <div id="tipue_search_content">1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績<br /><h1>w15</h1>
 <p>1,為何學習計算機程式需要建立個人倉儲?</p>
-<p>讓每個改版步驟都可以通過調閱來檢視</p>
+<p><span>A.能分散式的開發,免費,<span>一切公開,</span>每次push都能產生一個對應的版次，因此當出現大量麻煩的錯誤時或上級要求回歸前個設計時就能很方便的切換版</span></p>
 <p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
 <p>與時俱進</p>
 <p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
-<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p><span>A.1.Replit: 能夠提供使用者雲端開發環境</span></p>
+<p><span>  2.stud.cycu.org: 學校</span>Ubuntu司服器能直接acp推送改版</p>
+<p><span>  3.localhost:主機近端以執行動態網站使用acp推送改版</span></p>
 <p>4,https, ssh 到底提供使用者那些功能或優點?</p>
 <p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
 <p>5,Brython 與 Python 有甚麼差別?</p>
@@ -302,8 +304,7 @@ grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
 
 doc["power"].bind("click", launchAnimation)
 </script>
-<p></p>
-<br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
+<p></p><br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
         
     <!-- footer -->
       <div class="container">
