--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -40,7 +40,9 @@
 <p>2,全球資訊網能夠提供甚麼功能或有什麼優點?</p>
 <p>與時俱進</p>
 <p>3,Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
-<p>前兩個是一種遠端方式,locallhost是一種近端方式</p>
+<p><span>A.1.Replit: 能夠提供使用者雲端開發環境</span></p>
+<p><span>  2.stud.cycu.org: 學校</span>Ubuntu司服器能直接acp推送改版</p>
+<p><span>  3.localhost:主機近端以執行動態網站使用acp推送改版</span></p>
 <p>4,https, ssh 到底提供使用者那些功能或優點?</p>
 <p>https對於使用者來說比較方便,ssh需要在clone之前配置和添加ssh key</p>
 <p>5,Brython 與 Python 有甚麼差別?</p>
