--- a/content/問題解決與心得.html
+++ b/content/問題解決與心得.html
@@ -161,7 +161,8 @@ img.add_border {
 <p><img alt="" height="81" src="./../images/螢幕擷取畫面 2022-12-21 004054.png" width="507"/></p>
 <p><img alt="" height="204" src="./../images/螢幕擷取畫面 2022-12-21 004349.png" width="510"/></p>
 <p>然後再詢問老師如何處理之後</p>
-<p></p><br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
+<p></p>
+<br />w14 << <a href='w14.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
       <div class="container">
