--- a/content/w15.html
+++ b/content/w15.html
@@ -304,7 +304,8 @@ grid(origx, origy, w, h, wnum, hnum, pixel=1, color="black")
 
 doc["power"].bind("click", launchAnimation)
 </script>
-<p></p><br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
+<p></p>
+<br />1a w14抽考成績與缺考人員名單 << <a href='1a w14抽考成績與缺考人員名單.html'>Previous</a> <a href='考試成績.html'>Next</a> >> 考試成績</div>
         
     <!-- footer -->
       <div class="container">
