--- a/content/溫度轉換.html
+++ b/content/溫度轉換.html
@@ -143,9 +143,26 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>溫度轉換</h1>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
+f-c*9/5+32
+c=(f-32)*5/9
+'''
+c = input("請輸入攝氏溫度值")
+print(type(c))
+c= float(c)
+print(c, c*9/5 +32)</pre>
 <p></p>
-<br />W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
+f-c*9/5+32
+c=(f-32)*5/9
+'''
+c = input("請輸入攝氏溫度值")
+print(type(c))
+c= float(c)
+print("你輸入的攝氏溫度:" + str(c),"等於華氏溫度:" + str(c*9/5 +32))</pre>
+<p><br/><br/></p>
+<p></p><br />W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
         
     <!-- footer -->
       <div class="container">
