--- a/content/作業程式.html
+++ b/content/作業程式.html
@@ -190,7 +190,8 @@ for stud in cp_abs:
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">A = [i for i in range(1,10,2)]
 print(A)</pre>
-<p><br/><br/></p><br />W10 << <a href='W10.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+<p><br/><br/></p>
+<br />W10 << <a href='W10.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
