--- a/content/參考.html
+++ b/content/參考.html
@@ -189,7 +189,8 @@ print("="*20)
 print("以下為 w10 缺考名單:")
 for stud in cp_abs:
     print(stud)</pre>
-<p></p><br />W12 << <a href='W12.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+<p></p>
+<br />W12 << <a href='W12.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
