--- a/content/奇怪的3D方塊.html
+++ b/content/奇怪的3D方塊.html
@@ -189,7 +189,8 @@ def animate(time):
     renderer.render( scene, camera )
 
 animate(0)</pre>
-<p><br/><br/></p><br />抽點 << <a href='抽點.html'>Previous</a> <a href='test.html'>Next</a> >> test</div>
+<p><br/><br/></p>
+<br />抽點 << <a href='抽點.html'>Previous</a> <a href='test.html'>Next</a> >> test</div>
         
     <!-- footer -->
       <div class="container">
