--- a/content/抽點.html
+++ b/content/抽點.html
@@ -247,7 +247,8 @@ for i in data:
 brython_div1 = document["brython_div2"]
 """
 </pre>
-<p></p><br />W6 << <a href='W6.html'>Previous</a> <a href='奇怪的3D方塊.html'>Next</a> >> 奇怪的3D方塊</div>
+<p></p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='奇怪的3D方塊.html'>Next</a> >> 奇怪的3D方塊</div>
         
     <!-- footer -->
       <div class="container">
