--- a/content/溫度轉換.html
+++ b/content/溫度轉換.html
@@ -162,7 +162,8 @@ print(type(c))
 c= float(c)
 print("你輸入的攝氏溫度:" + str(c),"等於華氏溫度:" + str(c*9/5 +32))</pre>
 <p><br/><br/></p>
-<p></p><br />W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
+<p></p>
+<br />W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
         
     <!-- footer -->
       <div class="container">
