--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -7,8 +7,10 @@
 <h2>W5</h2>
 <h3>密碼亂數</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py"><span>點這裡執行</span>w5 passwod generator</a></p>
+<p></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 導入亂數模組
 import random
+
 # 導入字串模組
 import string
 # 利用 def 關鍵字定義函式
@@ -38,7 +40,7 @@ def gen_acc_pass(course, course_num):
         print(stud_num + "\t" + account + "\t" + password)
 gen_acc_pass("cp", cp_num)
 gen_acc_pass("cad", cad_num)</pre>
-<p></p><h2>W6</h2>
+<p>// ]]&gt;</p><h2>W6</h2>
 <h3>抽點</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"><span>點這裡執行</span>cp抽點</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># Python 的註解分為單行註解與多行, 單行註解可在字串前方放入 #
@@ -145,7 +147,8 @@ for i in data:
 brython_div1 = document["brython_div2"]
 """
 </pre>
-<p></p><h3>奇怪的3D方塊</h3>
+<p></p>
+<h3>奇怪的3D方塊</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py"><span>點這裡執行</span>w6 rotating block</a></p>
 <!-- 納入 Brython 環境 -->
 <script src="/static/brython.js"></script>
@@ -193,7 +196,8 @@ def animate(time):
     renderer.render( scene, camera )
 
 animate(0)</pre>
-<p><br/><br/></p><h3>test</h3>
+<p><br/><br/></p>
+<h3>test</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行</span>測試</a></p>
 <h2>W10</h2>
 <h3>作業程式</h3>
@@ -245,7 +249,8 @@ for stud in cp_abs:
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">A = [i for i in range(1,10,2)]
 print(A)</pre>
-<p><br/><br/></p><h2>W11</h2>
+<p><br/><br/></p>
+<h2>W11</h2>
 <h3>老師的繪畫方格</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/23cb848bd3efc8a917b1b122522c5a78/raw/9d127dc87d43708958a21b17843af87fef6e3a9d/gistfile1.txt"><span>點這裡執行</span>w11繪畫方格</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from browser import document as doc
@@ -289,7 +294,8 @@ h = int(canvas.height/num) - pixel
 x = 1
 y = 1
 grid(x, y, w, h, num, num, pixel=1, color="black")</pre>
-<p></p><h2>W12</h2>
+<p></p>
+<h2>W12</h2>
 <h3>參考</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a5af95f622379099d5d72e30d1e265a6/raw/9615223abccf2a15b29cd8c3824b38e0f5cf702f/gistfile1.txt"><span>點這裡執行:</span>w11作業參考程式</a></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import ast
@@ -338,7 +344,8 @@ print("="*20)
 print("以下為 w10 缺考名單:")
 for stud in cp_abs:
     print(stud)</pre>
-<p></p><h2>W13</h2>
+<p></p>
+<h2>W13</h2>
 <h3>溫度轉換</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''
@@ -360,9 +367,50 @@ print(type(c))
 c= float(c)
 print("你輸入的攝氏溫度:" + str(c),"等於華氏溫度:" + str(c*9/5 +32))</pre>
 <p><br/><br/></p>
-<p></p><h2>W14</h2>
+<p></p>
+<h2>W14</h2>
 <h3>1a w14抽考成績與缺考人員名單</h3>
 <div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/7f98aa18c39e3c0aeff0cd40bc2e2ee8/raw/a67e4f8a638b66e5d32e6484a436f8d2dd413ba0/gistfile1.txt"><span>點這裡執行</span>:1aw14抽考缺考人員名單</a></div>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import ast
+
+
+def get_stud(c_name):
+    courses = {"1a": "0747", "1b": "0761", "2a": "0773", "2b": "0786"}
+    c = courses[c_name]
+    url = "https://nfu.cycu.org/?semester=1111&amp;courseno=" + c + "&amp;column=True"
+    data = open(url).read().split("\n")
+    stud = data[:-1]
+    return stud
+    
+cp_stud = get_stud("1a")
+
+cp_w14_quiz_url = "https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/a48d36ae883bde8efd07b25bfddaed8f13200353/2022_1209_cp_w14_1a_quiz.json"
+
+def get_score(url):
+    json_data = open(url).read()
+    big_dict = ast.literal_eval(json_data)
+    data = big_dict["body"]["testuser"]
+    quiz_dict = {}
+    for i in data:
+        stud_id = data[i]["user_name"]
+        stud_score = int(float(data[i]["total_score"]))
+        quiz_dict[stud_id] = stud_score
+    return quiz_dict
+    
+cp_quiz = get_score(cp_w14_quiz_url)
+cp_abs = []
+for stud in cp_stud:
+    try:
+        print(stud, cp_quiz[stud])
+    except:
+        print(stud, "缺")
+        cp_abs.append(stud)
+print("="*20)
+print("以下為 w14 缺考名單:")
+for stud in cp_abs:
+    print(stud)</pre>
+</div>
 <h2>w15</h2>
 <p>1,為何學習計算機程式需要建立個人倉儲?</p>
 <p><span>A.能分散式的開發,免費,<span>一切公開,</span>每次push都能產生一個對應的版次，因此當出現大量麻煩的錯誤時或上級要求回歸前個設計時就能很方便的切換版</span></p>
