--- a/content/1a w14抽考成績與缺考人員名單.html
+++ b/content/1a w14抽考成績與缺考人員名單.html
@@ -182,7 +182,8 @@ print("="*20)
 print("以下為 w14 缺考名單:")
 for stud in cp_abs:
     print(stud)</pre>
-</div><br />W14 << <a href='W14.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
+</div>
+<br />W14 << <a href='W14.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
