--- a/content/密碼亂數.html
+++ b/content/密碼亂數.html
@@ -143,8 +143,10 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>密碼亂數</h1>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py"><span>點這裡執行</span>w5 passwod generator</a></p>
+<p></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 導入亂數模組
 import random
+
 # 導入字串模組
 import string
 # 利用 def 關鍵字定義函式
@@ -174,7 +176,7 @@ def gen_acc_pass(course, course_num):
         print(stud_num + "\t" + account + "\t" + password)
 gen_acc_pass("cp", cp_num)
 gen_acc_pass("cad", cad_num)</pre>
-<p></p><br />W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<p>// ]]&gt;</p><br />W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
