--- a/content/老師的繪畫方格.html
+++ b/content/老師的繪畫方格.html
@@ -184,7 +184,8 @@ h = int(canvas.height/num) - pixel
 x = 1
 y = 1
 grid(x, y, w, h, num, num, pixel=1, color="black")</pre>
-<p></p><br />W11 << <a href='W11.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+<p></p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
       <div class="container">
